framec_tests/language_specific/typescript/v3_mir/positive/inside_block_comment_transition_ignored.frm
@target typescript

system S {
    machine:
        $A {
            e() {
                /* block with -> $B() and => $^ */
                native();
            }
        }
}

